force-app/main/default/objects/Envelope_Recipient__c/Envelope_Recipient__c.object-meta.xml
<CustomObject>
    <label>Envelope Recipient</label>
    <nameField>
        <displayFormat>REC-{00000000}</displayFormat>
        <label>Envelope Recipient</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Envelope Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>