force-app/main/default/objects/Envelope_Recipient__c/fields/Ceremony_URL__c.field-meta.xml
<CustomField>
    <fullName>Ceremony_URL__c</fullName>
    <label>Ceremony URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>