force-app/main/default/objects/Envelope_Recipient__c/fields/Envelope__c.field-meta.xml
<CustomField>
    <fullName>Envelope__c</fullName>
    <label>Envelope</label>
    <referenceTo>Envelope__c</referenceTo>
    <relationshipLabel>Envelope Recipients</relationshipLabel>
    <relationshipName>Envelope_Recipients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>