force-app/main/default/objects/Envelope_Recipient__c/fields/Parent_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_Id__c</fullName>
    <label>Signer Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>