force-app/main/default/objects/Envelope_Recipient__c/fields/Parent_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_Name__c</fullName>
    <label>Signer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>