force-app/main/default/objects/Envelope_Recipient__c/fields/Recipient_ID__c.field-meta.xml
<CustomField>
    <fullName>Recipient_ID__c</fullName>
    <label>Recipient ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>