force-app/main/default/objects/Envelope_Recipient__c/fields/Recipient_Key__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Key__c</fullName>
    <inlineHelpText>The key used for SignatureAPI e.g &quot;client&quot; or &quot;contractor&apos;.</inlineHelpText>
    <label>Recipient Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>